--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-id-generator": "^3.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^7.0.2",
     "uuidv4": "^6.2.6",
     "web-vitals": "^0.2.4"
   },
